# gene-ontology-functionomes

./: .gitignore  ARCHITECTURE.md  README.md  README_SPARK.md  requirements.txt
config/: go_config.py
cpp/: BUILD.md  CMakeLists.txt  README.md
cpp/include/functionome_dag/columnar/: column.hpp  table.hpp
cpp/include/functionome_dag/dag/: graph.hpp  node.hpp  optimizer.hpp
cpp/include/functionome_dag/ops/: aggregate.hpp  filter.hpp  map.hpp  reduce.hpp
cpp/src/bindings/: python_bindings.cpp
cpp/src/columnar/: column.cpp  table.cpp
cpp/src/dag/: executor.cpp  graph.cpp  node.cpp  optimizer.cpp
cpp/src/ops/: aggregate.cpp  filter.cpp  map.cpp  reduce.cpp
databricks/: GO_Functionome_Pipeline.py
src/: classification.py  ingestion.py  ingestion_spark.py  main.py  main_spark.py  pipeline_dag.py  process_ontology.py  processing_spark.py  visualization.py  visualization_spark.py
